vdoc: fix overlapping fn titles on mobile browsers in portrait mode

--- a/cmd/tools/vdoc/theme/doc.css
+++ b/cmd/tools/vdoc/theme/doc.css
@@ -747,6 +747,9 @@ button.copy {
 		padding: 0 1rem;
 		justify-content: space-between;
 	}
+	.doc-content > .doc-node > .title {
+		margin-top: 3.5em;
+	}
 }
 
 @media (min-width: 1024px) {
